[package]
name = "souls"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
memory-rs = { git = "https://github.com/etra0/memory-rs" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.35", features = [
    "Win32_System_LibraryLoader",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_SystemServices",
    "Win32_Security",
] }
